# hexforge-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/http/: app_error_impl.rs  app_state.rs  mod.rs  responses.rs
src/adapters/http/routes/: health.rs  mod.rs
src/adapters/persistence/: mod.rs
src/application/: app_error.rs  mod.rs
src/domain/: mod.rs
src/infra/: app.rs  config.rs  db.rs  mod.rs  setup.rs  startup_error.rs
tests/: health.rs
