[package]
name = "apihules"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
mongodb = "3.5.2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "json"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
thiserror = "2.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
